starts testing files for research agent

--- a/core/agents/nb_research_agent.ipynb
+++ b/core/agents/nb_research_agent.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -317,24 +317,35 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "messages['messages'][3]"
+    "response = react_graph.nodes['assistant'].invoke(\n",
+    "    {\"messages\": [HumanMessage(content=\"hi there\")]}\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'messages': [HumanMessage(content='list all the tools you have available to you', additional_kwargs={}, response_metadata={}, id='5e1127ab-3153-4e0e-ba0c-93912e105a2a'), AIMessage(content='Certainly! Here are the tools I can use:\\n\\n1. **Multiply**: This function multiplies two numbers.\\n2. **Add**: This function adds two numbers.\\n3. **Divide**: This function divides two numbers.\\n4. **Query Wikipedia**: This function searches for information on Wikipedia about a given topic.\\n\\nWould you like to perform any of these operations?', additional_kwargs={}, response_metadata={'model': 'mistral-nemo', 'created_at': '2025-03-15T18:20:56.35671Z', 'done': True, 'done_reason': 'stop', 'total_duration': 2711318000, 'load_duration': 27237625, 'prompt_eval_count': 270, 'prompt_eval_duration': 844000000, 'eval_count': 76, 'eval_duration': 1838000000, 'message': Message(role='assistant', content='Certainly! Here are the tools I can use:\\n\\n1. **Multiply**: This function multiplies two numbers.\\n2. **Add**: This function adds two numbers.\\n3. **Divide**: This function divides two numbers.\\n4. **Query Wikipedia**: This function searches for information on Wikipedia about a given topic.\\n\\nWould you like to perform any of these operations?', images=None, tool_calls=None)}, id='run-aeee3461-1790-4ba8-97ed-c2d769f6d8c1-0', usage_metadata={'input_tokens': 270, 'output_tokens': 76, 'total_tokens': 346})], 'claim': 'list all the tools you have available to you', 'evidence': []}\n"
+      "{'messages': AIMessage(content=\"Hello! How can I help you today? Let's have a nice conversation. If you need any calculations, I can do that too! 😊\", additional_kwargs={}, response_metadata={'model': 'mistral-nemo', 'created_at': '2025-03-15T20:58:08.533286Z', 'done': True, 'done_reason': 'stop', 'total_duration': 4515353959, 'load_duration': 617177417, 'prompt_eval_count': 263, 'prompt_eval_duration': 3137000000, 'eval_count': 32, 'eval_duration': 759000000, 'message': Message(role='assistant', content=\"Hello! How can I help you today? Let's have a nice conversation. If you need any calculations, I can do that too! 😊\", images=None, tool_calls=None)}, id='run-5b14021e-fbe7-4626-ba5c-aee5d59ba529-0', usage_metadata={'input_tokens': 263, 'output_tokens': 32, 'total_tokens': 295})}\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(response)"
+   ]
   },
   {
    "cell_type": "code",
