adds langgraph.json

--- a/core/agents/nb_integration.ipynb
+++ b/core/agents/nb_integration.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tools: ['multiply', 'add', 'divide', 'query']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from claim_decomposer import claim_decomposer\n",
     "from research_agent import research_agent\n",
@@ -22,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +31,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Apollo 11 mission landed humans on the Moon for the first time on July 20, 1969.\n",
+      "Neil Armstrong was the first person to walk on the lunar surface.\n",
+      "The mission was launched by NASA using a Saturn V rocket.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for claim in claims:\n",
+    "    print(claim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m System Message \u001b[0m================================\n",
+      "\n",
+      "The user will give you some text. Your task is to identify and extract every factual claim made in the text.\n",
+      "\n",
+      "### Instructions:\n",
+      "\n",
+      "Definition: A factual claim is any statement in the document that asserts a verifiable fact about the world (e.g., data points, events, or concrete information). Do not include opinions, subjective interpretations, or ambiguous statements.\n",
+      "\n",
+      "Extraction: Read the entire document carefully and list each individual factual claim. Each claim should be a complete statement that can be fact-checked.\n",
+      "\n",
+      "Output Format:\n",
+      "\n",
+      "Return your results as a JSON array of strings.\n",
+      "Each string in the array must contain one factual claim.\n",
+      "Do not include any additional text, explanations, or commentary—only the JSON array.\n",
+      "\n",
+      "### EXAMPLE:\n",
+      "Document:\n",
+      "\"Albert Einstein was born in Germany. He developed the theory of relativity, which revolutionized physics.\"\n",
+      "\n",
+      "Output\n",
+      "[\n",
+      "  \"Albert Einstein was born in Germany.\",\n",
+      "  \"Albert Einstein developed the theory of relativity.\",\n",
+      "  \"The theory of relativity revolutionized physics.\"\n",
+      "]\n",
+      "\n",
+      "###\n",
+      "\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "\n",
+      "The Apollo 11 mission landed humans on the Moon for the first time on July 20, 1969. \n",
+      "Neil Armstrong was the first person to walk on the lunar surface.\n",
+      "The mission was launched by NASA using a Saturn V rocket.\n",
+      "\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "[\n",
+      "  \"The Apollo 11 mission landed humans on the Moon for the first time on July 20, 1969.\",\n",
+      "  \"Neil Armstrong was the first person to walk on the lunar surface.\",\n",
+      "  \"The mission was launched by NASA using a Saturn V rocket.\"\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for message in response['messages']:\n",
+    "    message.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
