changing notebook to make it work with the remote tool

--- a/core/agents/nb_research_agent.ipynb
+++ b/core/agents/nb_research_agent.ipynb
@@ -2,16 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.insert(0, os.path.abspath('../..'))\n",
+    "\n",
+    "from core.agents.tools.remote_tool import create_remote_tool\n",
+    "\n",
+    "MOCK_METHODS = {\n",
+    "    \"get_article\": {\n",
+    "        \"description\": \"Get information about a news article\",\n",
+    "        \"input_types\": [str],  # URL\n",
+    "        \"mock_response\": {\n",
+    "            \"title\": \"News Article\",\n",
+    "            \"author\": \"John Doe\",\n",
+    "            \"published_date\": \"2025-03-22\",\n",
+    "            \"content\": \"This is an example news article content.\"\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "tool_instance = create_remote_tool(\n",
+    "        name=\"NewsAPI\",\n",
+    "        url=\"https://example.com/api\",\n",
+    "        api_key=\"test_key\",\n",
+    "        mock=True,\n",
+    "        mock_methods=MOCK_METHODS\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,21 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tools: ['multiply', 'add', 'divide', 'query']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "TOOL_REGISTRY = {\n",
-    "    'tools.calculator': ['multiply', 'add', 'divide'],\n",
-    "    'tools.wikipedia': ['query']\n",
+    "    # 'tools.calculator': ['multiply', 'add', 'divide'],\n",
+    "    # 'tools.wikipedia': ['query'],\n",
+    "    'core.agents.tools.remote_tool': ['remote_tool']\n",
     "}\n",
     "\n",
     "def import_function(module_name, function_name):\n",
@@ -71,7 +99,10 @@
     "        return None\n",
     "\n",
     "tools = [import_function(module, function) for module, functions in TOOL_REGISTRY.items() for function in functions]\n",
-    "print(f\"Tools: {[tool.__name__ for tool in tools]}\")"
+    "# Filter out None values in case import failed\n",
+    "tools = [tool for tool in tools if tool is not None]\n",
+    "if tools:\n",
+    "    print(f\"Tools: {[tool.__name__ for tool in tools]}\")"
    ]
   },
   {
@@ -80,12 +111,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = ChatOllama(\n",
-    "    model=MODEL, \n",
-    "    temperature=TEMPERATURE,\n",
-    "    # base_url=\"http://host.docker.internal:11434\", # if running in the studio\n",
-    "    ).bind_tools(tools)\n",
-    "\n",
+    "# Only bind tools if we have valid tools\n",
+    "if tools:\n",
+    "    llm = ChatOllama(\n",
+    "        model=MODEL, \n",
+    "        temperature=TEMPERATURE,\n",
+    "        # base_url=\"http://host.docker.internal:11434\", # if running in the studio\n",
+    "        ).bind_tools([tool for tool in tools])\n",
+    "else:\n",
+    "    llm = ChatOllama(\n",
+    "        model=MODEL, \n",
+    "        temperature=TEMPERATURE,\n",
+    "        # base_url=\"http://host.docker.internal:11434\", # if running in the studio\n",
+    "        )\n",
     "\n",
     "class State(TypedDict):\n",
     "    messages: Annotated[list[BaseMessage], add_messages]\n",
@@ -272,24 +310,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ToolMessage(content=\"No Wikipedia page found for 'Compare the sizes of fractions 1/3 and 1/4.'.\", name='query', id='dd7e1db8-9f8d-412e-96d6-bf28b3aec30b', tool_call_id='e5d05507-9826-4647-9c62-0485a24e75c5')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
@@ -326,7 +346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "newsagent",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -340,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
