--- a/core/agents/research_agent_with_remote_tools.ipynb
+++ b/core/agents/research_agent_with_remote_tools.ipynb
@@ -2,20 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "530ddf11-d6ef-43e2-a560-df08dc1e8652",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "OPENAI_API_KEY:  ········\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, getpass\n",
     "\n",
@@ -28,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f40af0da-5b59-49ff-b510-055c119728f9",
    "metadata": {},
    "outputs": [],
@@ -50,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b71a49aa-0df2-4033-ba22-dff2a74e25b1",
    "metadata": {},
    "outputs": [],
@@ -64,6 +56,7 @@
     "\n",
     "from core.agents.tools.remote_tools import remote_tool_func, fetch_tools, remote_api_call,construct_url\n",
     "from langchain.agents import Tool\n",
+    "from langchain.tools import StructuredTool\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_ollama import ChatOllama\n",
     "from langchain.agents import AgentExecutor, create_openai_tools_agent\n",
@@ -75,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "768a19e0-1e80-4492-9a09-da91c70911de",
    "metadata": {},
    "outputs": [
@@ -90,38 +83,18 @@
       "Invoking: `fetch_remote_tool` with `123`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'name': 'temperature_api', 'url': 'https://temperature/api?', 'params': {'key': 'whatever'}}, {'name': 'news', 'url': 'https://nytimes/api', 'params': 'whatever'}]\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `construct_url` with `{\"name\": \"temperature_api\", \"url\": \"https://temperature/api?\", \"params\": {\"key\": \"whatever\"}}`\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'name': 'temperature_api', 'url': 'https://temperature/api?', 'params': {'key': 'whatever', 'q': ''}}, {'name': 'news', 'url': 'https://nytimes/api', 'params': {'key': 'whatever'}}]\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `construct_url` with `{\"name\": \"temperature_api\", \"url\": \"https://temperature/api?\", \"params\": {\"key\": \"whatever\", \"q\": \"temperature\"}}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[38;5;200m\u001b[1;3mhttps://temperature/api?key=whatever\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `ping_remote_api` with `https://temperature/api?key=whatever`\n",
+      "\u001b[0m\u001b[38;5;200m\u001b[1;3mhttps://temperature/api?key=whatever&q=temperature\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `ping_remote_api` with `https://temperature/api?key=whatever&q=temperature`\n",
+      "responded: I have retrieved the temperature API for you. The full URL for the temperature API with the query parameter 'temperature' is: 'https://temperature/api?key=whatever&q=temperature'. Let me ping the API to get the temperature for you.\n",
       "\n",
-      "\n",
-      "\u001b[0m\u001b[33;1m\u001b[1;3m{'temperature': 20}\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `fetch_remote_tool` with `123`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'name': 'temperature_api', 'url': 'https://temperature/api?', 'params': {'key': 'whatever'}}, {'name': 'news', 'url': 'https://nytimes/api', 'params': 'whatever'}]\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `fetch_remote_tool` with `123`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'name': 'temperature_api', 'url': 'https://temperature/api?', 'params': {'key': 'whatever'}}, {'name': 'news', 'url': 'https://nytimes/api', 'params': 'whatever'}]\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `fetch_remote_tool` with `123`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'name': 'temperature_api', 'url': 'https://temperature/api?', 'params': {'key': 'whatever'}}, {'name': 'news', 'url': 'https://nytimes/api', 'params': 'whatever'}]\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `construct_url` with `{\"name\": \"temperature_api\", \"url\": \"https://temperature/api?\", \"params\": {\"key\": \"whatever\"}}`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[38;5;200m\u001b[1;3mhttps://temperature/api?key=whatever\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `ping_remote_api` with `https://temperature/api?key=whatever`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[33;1m\u001b[1;3m{'temperature': 20}\u001b[0m\u001b[32;1m\u001b[1;3mThe current temperature is 20°C.\u001b[0m\n",
+      "\u001b[0m\u001b[33;1m\u001b[1;3m{'temperature': 20}\u001b[0m\u001b[32;1m\u001b[1;3mThe temperature is 20 degrees.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "Agent result: {'input': 'you have user_id 123. what is the temperature?', 'output': 'The current temperature is 20°C.'}\n"
+      "Agent result: {'input': 'you have user_id 123. what is the temperature?', 'output': 'The temperature is 20 degrees.'}\n"
      ]
     }
    ],
@@ -138,25 +111,39 @@
     "    description=\"Ping a constructed API URL and return the response.\"\n",
     ")\n",
     "\n",
+    "\n",
     "construct_url_tool = Tool(\n",
     "    name=\"construct_url\",\n",
     "    func=construct_url,\n",
-    "    description=\"Construct a full URL from a tool dictionary. Input must be a dictionary in the format {'name': string, 'url': string, 'params': dict}.\"\n",
+    "    description=(\n",
+    "        \"Constructs a full URL from a tool dictionary with updated query parameters. \"\n",
+    "        \"This tool takes a dictionary containing the name of the tool, the base URL, \"\n",
+    "        \"and a set of parameters. The query string should already be added to the parameters \"\n",
+    "        \"using 'add_query_to_params'. The function then constructs the full URL by \"\n",
+    "        \"combining the base URL and the parameters into a query string, returning the full URL. \"\n",
+    "        \"The expected input for this tool are a dictionary and a query string in the following format: \"\n",
+    "        \"{'name': <tool_name>, 'url': <base_url>, 'params': <parameter_dict>} where 'params' \"\n",
+    "        \"includes the query string (e.g., 'q': <query_value>). the query string will be added to the <query_value>\"\n",
+    "    )\n",
     ")\n",
     "\n",
-    "tools = [fetch_tool, ping_tool,construct_url_tool]\n",
+    "tools = [fetch_tool, ping_tool, construct_url_tool]\n",
     "\n",
     "prompt = ChatPromptTemplate.from_messages([\n",
     "    (\"system\", \n",
     "     \"You are a smart API assistant. \"\n",
     "     \"1. First, use 'fetch_remote_tool' with user_id to retrieve a list of tool dictionaries. \"\n",
     "     \"2. Then, select the correct tool (e.g., 'temperature_api'). \"\n",
-    "     \"3. Pass the **entire tool dictionary** (not just the URL) to 'construct_url' to generate a full URL. \"\n",
-    "     \"4. Finally, use 'ping_remote_api' with the fully constructed URL to get the API response. \"\n",
+    "     \"3. Modify the tool dictionary by adding the query directly into the 'params' field under 'q'. \"\n",
+    "     \"4. Pass the updated tool dictionary directly to 'construct_url' to generate a full URL. \"\n",
+    "     \"    Example: The full URL will be constructed like this: \"\n",
+    "     \"    'https://temperature/api?key=whatever&q=temperature'. \"\n",
+    "     \"5. Finally, use 'ping_remote_api' with the fully constructed URL to get the API response. \"\n",
     "     \"Be sure to pass dictionaries, not strings, when constructing URLs.\"),\n",
     "    (\"human\", \"{input}\"),\n",
     "    (\"ai\", \"{agent_scratchpad}\")\n",
     "])\n",
+    "\n",
     "\n",
     "# model = ChatOllama(model=\"mistral-nemo\", temperature=0)\n",
     "model  = ChatOpenAI(\n",
@@ -169,6 +156,7 @@
     "agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True)\n",
     "\n",
     "result = agent_executor.invoke({\"input\": \"you have user_id 123. what is the temperature?\"})\n",
+    "\n",
     "\n",
     "print(f\"Agent result: {result}\")\n"
    ]
