adds langsmith testing for claim decomposer, using pathlib to set base directories so tests can import agents

--- a/core/agents/nb_integration.ipynb
+++ b/core/agents/nb_integration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
      "text": [
       "The Apollo 11 mission landed humans on the Moon for the first time on July 20, 1969.\n",
       "Neil Armstrong was the first person to walk on the lunar surface.\n",
-      "The mission was launched by NASA using a Saturn V rocket.\n"
+      "The Apollo 11 mission was launched by NASA using a Saturn V rocket.\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +75,8 @@
       "Do not include any additional text, explanations, or commentary—only the JSON array.\n",
       "\n",
       "### EXAMPLE:\n",
+      "\n",
+      "### Example 1\n",
       "Document:\n",
       "\"Albert Einstein was born in Germany. He developed the theory of relativity, which revolutionized physics.\"\n",
       "\n",
@@ -85,7 +87,130 @@
       "  \"The theory of relativity revolutionized physics.\"\n",
       "]\n",
       "\n",
-      "###\n",
+      "### Example 2\n",
+      "Document:\n",
+      "\"William Shakespeare was a famous writer from England, known for his plays and poems. He wrote 39 plays, including Romeo and Juliet, Hamlet, and Macbeth. His stories explore feelings like love, power, and betrayal. Even today, people around the world still perform his plays, and many of his phrases are part of everyday speech.\"\n",
+      "\n",
+      "Output\n",
+      "[\n",
+      "  \"Shakespeare wrote 39 plays and many poems.\",\n",
+      "  \"Shakespeare famous works include Romeo and Juliet, Hamlet, and Macbeth.\",\n",
+      "  \"Shakespeare plays are still performed today, and his phrases are widely used.\"\n",
+      "]\n",
+      "\n",
+      "### Example 3\n",
+      "Document:\n",
+      "\"Virginia Woolf was a famous English writer known for her unique style and powerful ideas. She wrote novels like Mrs. Dalloway and To the Lighthouse, exploring people’s inner thoughts and emotions. Woolf was also a strong voice for women’s rights, believing that women should have the freedom to write and live independently. Her work still inspires readers and writers today.\"\n",
+      "\n",
+      "Output\n",
+      "[\n",
+      "  \"Virginia Woolf was a well-known English writer.\",\n",
+      "  \"Virginia Woolf wrote famous books like Mrs. Dalloway and To the Lighthouse.\",\n",
+      "  \"Virginia Woolf supported women’s rights and believed in women’s freedom to create and live independently.\"\n",
+      "]\n",
+      "\n",
+      "### Example 4\n",
+      "Document:\n",
+      "\"A Room of One's Own is a famous book by Virginia Woolf, based on a series of lectures she gave in 1928. It argues that women need money and a private space to write and create freely. Woolf explores how women were historically denied education and opportunities, which held back their voices in literature. The book remains an important work about women’s rights and creative freedom.\"\n",
+      "\n",
+      "Output\n",
+      "[\n",
+      "  \"A Room of One's Own is a book by Virginia Woolf about women’s freedom to create.\",\n",
+      "  \"Virginia Woolf argues that women need money and a private space to write in her book A Room of One's Own.\",\n",
+      "  \"A Room of One's Own highlights how women were held back by a lack of education and opportunity\"\n",
+      "]\n",
+      "\n",
+      "### Example 5\n",
+      "Document:\n",
+      "\"Mount Everest is the tallest mountain in the world, standing at 8,848 meters above sea level. It is located in the Himalayas on the border between Nepal and China. Every year, hundreds of climbers attempt to reach its summit, despite the extreme weather and physical challenges.\"\n",
+      "\n",
+      "Output\n",
+      "[\n",
+      "  \"Mount Everest is the tallest mountain in the world at 8,848 meters.\",\n",
+      "  \"Mount Everest is located in the Himalayas on the border between Nepal and China.\",\n",
+      "  \"Hundreds of climbers attempt to reach Mount Everest’s summit every year.\"\n",
+      "]\n",
+      "\n",
+      "### Example 6\n",
+      "Document:\n",
+      "\"The Great Wall of China stretches over 13,000 miles and was built to protect ancient Chinese states from invasions. Construction began as early as the 7th century BC. It remains one of the most visited landmarks in the world today.\"\n",
+      "\n",
+      "Output\n",
+      "[\n",
+      "  \"The Great Wall of China stretches over 13,000 miles.\",\n",
+      "  \"The Great Wall of China was built to protect ancient Chinese states from invasions.\",\n",
+      "  \"Construction of the Great Wall began as early as the 7th century BC.\",\n",
+      "  \"The Great Wall of China is one of the most visited landmarks in the world today.\"\n",
+      "]\n",
+      "\n",
+      "### Example 7\n",
+      "Document:\n",
+      "\"Marie Curie was a pioneering scientist who won Nobel Prizes in both Physics and Chemistry. She was the first woman to win a Nobel Prize, and the only person to win in two different sciences. Her research on radioactivity laid the foundation for modern nuclear physics.\"\n",
+      "\n",
+      "Output\n",
+      "[\n",
+      "  \"Marie Curie won Nobel Prizes in both Physics and Chemistry.\",\n",
+      "  \"Marie Curie was the first woman to win a Nobel Prize.\",\n",
+      "  \"Marie Curie is the only person to win Nobel Prizes in two different sciences.\",\n",
+      "  \"Marie Curie’s research on radioactivity laid the foundation for modern nuclear physics.\"\n",
+      "]\n",
+      "\n",
+      "### Example 8\n",
+      "Document: \n",
+      "\"Bananas grow on trees and are native to Europe. The Eiffel Tower is located in Berlin and was built in the 1800s. The Amazon River is the longest river in the world. Mount Kilimanjaro is in South America. Humans have five senses and over 200 bones. The sun revolves around the Earth. Jupiter is the smallest planet in the solar system. Penguins live at the North Pole. The Great Wall of China is visible from space. Water boils at 100°C at sea level.\"\n",
+      "\n",
+      "Output\n",
+      "[\n",
+      "  \"Bananas grow on trees.\",\n",
+      "  \"Bananas are native to Europe.\",\n",
+      "  \"The Eiffel Tower is located in Berlin.\",\n",
+      "  \"The Eiffel Tower was built in the 1800s.\",\n",
+      "  \"The Amazon River is the longest river in the world.\",\n",
+      "  \"Mount Kilimanjaro is in South America.\",\n",
+      "  \"Humans have five senses.\",\n",
+      "  \"Humans have over 200 bones.\",\n",
+      "  \"The sun revolves around the Earth.\",\n",
+      "  \"Jupiter is the smallest planet in the solar system.\",\n",
+      "  \"Penguins live at the North Pole.\",\n",
+      "  \"The Great Wall of China is visible from space.\",\n",
+      "  \"Water boils at 100°C at sea level.\"\n",
+      "]\n",
+      "### Example 9\n",
+      "Document: \n",
+      "\"Barack Obama was the 44th President of the United States. He was born in Canada and served two terms in office. The capital of Australia is Sydney. Lightning never strikes the same place twice. The Pacific Ocean is the largest ocean on Earth. The Great Pyramid of Giza is over 4,000 years old. Tomatoes are vegetables. The Earth’s atmosphere contains oxygen. Shakespeare wrote 39 plays. Whales are mammals, not fish.\"\n",
+      "\n",
+      "Output\n",
+      "[\n",
+      "  \"Barack Obama was the 44th President of the United States.\",\n",
+      "  \"Barack Obama was born in Canada.\",\n",
+      "  \"Barack Obama served two terms in office.\",\n",
+      "  \"The capital of Australia is Sydney.\",\n",
+      "  \"Lightning never strikes the same place twice.\",\n",
+      "  \"The Pacific Ocean is the largest ocean on Earth.\",\n",
+      "  \"The Great Pyramid of Giza is over 4,000 years old.\",\n",
+      "  \"Tomatoes are vegetables.\",\n",
+      "  \"The Earth’s atmosphere contains oxygen.\",\n",
+      "  \"Shakespeare wrote 39 plays.\",\n",
+      "  \"Whales are mammals, not fish.\"\n",
+      "]\n",
+      "\n",
+      "###Example 10\n",
+      "Document: \n",
+      "\"Napoleon Bonaparte was defeated at the Battle of Waterloo in 1815. Gold is heavier than water. Bats are blind. The human brain uses only 10% of its capacity. Everest is the second tallest mountain in the world. The Sahara is the coldest desert. Mercury is the closest planet to the sun. The internet was invented in the 1990s. The Statue of Liberty was a gift from France. Dinosaurs lived during the Ice Age.\"\n",
+      "\n",
+      "Output\n",
+      "[\n",
+      "  \"Napoleon Bonaparte was defeated at the Battle of Waterloo in 1815.\",\n",
+      "  \"Gold is heavier than water.\",\n",
+      "  \"Bats are blind.\",\n",
+      "  \"The human brain uses only 10% of its capacity.\",\n",
+      "  \"Mount Everest is the second tallest mountain in the world.\",\n",
+      "  \"The Sahara is the coldest desert.\",\n",
+      "  \"Mercury is the closest planet to the sun.\",\n",
+      "  \"The internet was invented in the 1990s.\",\n",
+      "  \"The Statue of Liberty was a gift from France.\",\n",
+      "  \"Dinosaurs lived during the Ice Age.\"\n",
+      "]\n",
       "\n",
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
@@ -99,7 +224,7 @@
       "[\n",
       "  \"The Apollo 11 mission landed humans on the Moon for the first time on July 20, 1969.\",\n",
       "  \"Neil Armstrong was the first person to walk on the lunar surface.\",\n",
-      "  \"The mission was launched by NASA using a Saturn V rocket.\"\n",
+      "  \"The Apollo 11 mission was launched by NASA using a Saturn V rocket.\"\n",
       "]\n"
      ]
     }
@@ -111,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -140,11 +265,11 @@
       "Claim: Neil Armstrong was the first person to walk on the lunar surface.\n",
       "Label: true\n",
       "Justification: Neil Armstrong became the first person to step onto the moon's surface during the Apollo 11 mission on July 20, 1969, famously saying 'That's one small step for man, one giant leap for mankind.'\n",
-      "Evidence: [\"No Wikipedia page found for 'First person to walk on the moon'.\"]\n",
+      "Evidence: [\"No Wikipedia page found for 'Neil Armstrong first person to walk on lunar surface'.\"]\n",
       "---\n",
-      "Claim: The mission was launched by NASA using a Saturn V rocket.\n",
+      "Claim: The Apollo 11 mission was launched by NASA using a Saturn V rocket.\n",
       "Label: true\n",
-      "Justification: The Apollo 11 mission, which landed the first humans on the Moon, was indeed launched by NASA using a Saturn V rocket on July 16, 1969.\n",
+      "Justification: The Apollo 11 mission, which successfully landed astronauts Neil Armstrong and Buzz Aldrin on the Moon on July 20, 1969, was indeed launched by NASA using the powerful Saturn V rocket from Kennedy Space Center in Florida.\n",
       "Evidence: [\"No Wikipedia page found for 'Apollo 11 mission'.\"]\n",
       "---\n"
      ]
@@ -161,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -205,15 +330,12 @@
       "Claim: The Apollo 11 mission landed humans on the Moon for the first time on July 20, 1969.\n",
       "Verdict: true\n",
       "Justification: Apollo 11's lunar module, \"Eagle\", successfully landed astronauts Neil Armstrong and Buzz Aldrin on the Moon on July 20, 1969, while Michael Collins orbited overhead in the Command Module, \"Columbia\". This marked the first time humans set foot on another celestial body.\n",
-      "\n",
       "Claim: Neil Armstrong was the first person to walk on the lunar surface.\n",
       "Verdict: true\n",
       "Justification: Neil Armstrong became the first person to step onto the moon's surface during the Apollo 11 mission on July 20, 1969, famously saying 'That's one small step for man, one giant leap for mankind.'\n",
-      "\n",
-      "Claim: The mission was launched by NASA using a Saturn V rocket.\n",
+      "Claim: The Apollo 11 mission was launched by NASA using a Saturn V rocket.\n",
       "Verdict: true\n",
-      "Justification: The Apollo 11 mission, which landed the first humans on the Moon, was indeed launched by NASA using a Saturn V rocket on July 16, 1969.\n",
-      "\n",
+      "Justification: The Apollo 11 mission, which successfully landed astronauts Neil Armstrong and Buzz Aldrin on the Moon on July 20, 1969, was indeed launched by NASA using the powerful Saturn V rocket from Kennedy Space Center in Florida.\n",
       "\n",
       "### **Response Format:**\n",
       "Your response should be a structured JSON object:\n",
@@ -279,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -295,6 +417,13 @@
     "print(final_state['final_label'])\n",
     "print(final_state['final_justification'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
