--- a/core/agents/nb_verdict_agent.ipynb
+++ b/core/agents/nb_verdict_agent.ipynb
@@ -2,25 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "270906d2-ff8a-4ec1-8f65-84ef7b07844e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'graph' from 'verdict_agent' (/home/csterckx/newsagent/core/agents/verdict_agent.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mverdict_agent\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m graph\n\u001b[1;32m      3\u001b[0m test_state \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmessages\u001b[39m\u001b[38;5;124m\"\u001b[39m: [],\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclaims\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfinal_justification\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     16\u001b[0m }\n\u001b[1;32m     18\u001b[0m final_state \u001b[38;5;241m=\u001b[39m graph\u001b[38;5;241m.\u001b[39minvoke(test_state)\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'graph' from 'verdict_agent' (/home/csterckx/newsagent/core/agents/verdict_agent.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Final Verdict: FALSE\n",
+      " Justification: The majority of claims in the document are false. The Eiffel Tower is explicitly stated to be located in Berlin, which is incorrect (it's actually in Paris). This error outweighs the single true claim about water boiling at 100°C at sea level.\n",
+      "\n",
+      " Formatted Output:\n",
+      "{'final_label': 'FALSE', 'final_justification': \"The majority of claims in the document are false. The Eiffel Tower is explicitly stated to be located in Berlin, which is incorrect (it's actually in Paris). This error outweighs the single true claim about water boiling at 100°C at sea level.\"}\n",
+      "\n",
+      " Formatted Output (pretty):\n",
+      "{\n",
+      "  \"final_label\": \"FALSE\",\n",
+      "  \"final_justification\": \"The majority of claims in the document are false. The Eiffel Tower is explicitly stated to be located in Berlin, which is incorrect (it's actually in Paris). This error outweighs the single true claim about water boiling at 100\\u00b0C at sea level.\"\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "from verdict_agent import graph\n",
+    "from verdict_agent import verdict_agent\n",
     "\n",
+    "# output test\n",
     "test_state = {\n",
     "    \"messages\": [],\n",
     "    \"claims\": [\n",
@@ -33,13 +40,26 @@
     "        \"Scientific evidence confirms water boils at 100°C at sea level.\"\n",
     "    ],\n",
     "    \"final_label\": None,\n",
-    "    \"final_justification\": None\n",
+    "    \"final_justification\": None,\n",
+    "    \"formatted_output\": None\n",
     "}\n",
     "\n",
-    "final_state = graph.invoke(test_state)\n",
+    "# Execute agent\n",
+    "final_state = verdict_agent.invoke(test_state)\n",
     "\n",
-    "print(f\"Final Verdict: {final_state['final_label']}\")\n",
-    "print(f\"Justification: {final_state['final_justification']}\")\n"
+    "# show results\n",
+    "print(\" Final Verdict:\", final_state[\"final_label\"])\n",
+    "print(\" Justification:\", final_state[\"final_justification\"])\n",
+    "\n",
+    "# check `formatted_output`\n",
+    "print(\"\\n Formatted Output:\")\n",
+    "print(final_state.get(\"formatted_output\", \"Not found\"))\n",
+    "\n",
+    "# show if dict output\n",
+    "import json\n",
+    "if isinstance(final_state.get(\"formatted_output\"), dict):\n",
+    "    print(\"\\n Formatted Output (pretty):\")\n",
+    "    print(json.dumps(final_state[\"formatted_output\"], indent=2))\n"
    ]
   },
   {
@@ -53,7 +73,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
